--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-    background-color: red;
+    background-color: #f0f0f0;
 }
